--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.8.0,<3.9"
 numpy = "^1.22.2"
 Flask = "^2.1.2"
 Flask-Cors = "^3.0.10"
+marshmallow-dataclass = "^8.5.8"
 
 [tool.poetry.dev-dependencies]
 
