--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.22.2"
 Flask = "^2.1.2"
 Flask-Cors = "^3.0.10"
 marshmallow-dataclass = "^8.5.8"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
